// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] layouts/<Menu /> (Admin) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH Menu__Container-sc-1tufs3d-0 fftBWu"
  >
    <div
      class="Menu__Dropdown-sc-1tufs3d-3 loMVOU"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-caret-down fa-w-10 fa-1x Icon-sc-4jlog9-0 hXLKsx"
        color="var(--color-black-leather-jacket)"
        data-icon="caret-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          fill="currentColor"
        />
      </svg>
      <span
        class="Menu__DropdownText-sc-1tufs3d-4 gxLpxC"
      >
        John Doe
      </span>
      <div
        class="sc-bdVaJa sc-bwzfXH Menu__DropdownMenu-sc-1tufs3d-5 dAypUM"
      >
        <span
          class="Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 Menu__DropdownLink-sc-1tufs3d-6 jmXsXQ"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-sign-out-alt fa-w-16 fa-1x Icon-sc-4jlog9-0 hXLKsx"
            color="var(--color-black-leather-jacket)"
            data-icon="sign-out-alt"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z"
              fill="currentColor"
            />
          </svg>
          Se déconnecter
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] layouts/<Menu /> (Contributor) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH Menu__Container-sc-1tufs3d-0 fftBWu"
  >
    <span
      class="Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 eCRsrl"
    >
      Liste des réponses
    </span>
    <div
      class="Menu__Dropdown-sc-1tufs3d-3 loMVOU"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-caret-down fa-w-10 fa-1x Icon-sc-4jlog9-0 hXLKsx"
        color="var(--color-black-leather-jacket)"
        data-icon="caret-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          fill="currentColor"
        />
      </svg>
      <span
        class="Menu__DropdownText-sc-1tufs3d-4 gxLpxC"
      >
        Aide
      </span>
      <div
        class="sc-bdVaJa sc-bwzfXH Menu__DropdownMenu-sc-1tufs3d-5 dAypUM"
      >
        <span
          class="Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 Menu__DropdownLink-sc-1tufs3d-6 jmXsXQ"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-book fa-w-14 fa-1x Icon-sc-4jlog9-0 hXLKsx"
            color="var(--color-black-leather-jacket)"
            data-icon="book"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
              fill="currentColor"
            />
          </svg>
          Guide : Outil de contribution
        </span>
        <span
          class="Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 Menu__DropdownLink-sc-1tufs3d-6 jmXsXQ"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-feather-alt fa-w-16 fa-1x Icon-sc-4jlog9-0 hXLKsx"
            color="var(--color-black-leather-jacket)"
            data-icon="feather-alt"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 0C460.22 3.56 96.44 38.2 71.01 287.61c-3.09 26.66-4.84 53.44-5.99 80.24l178.87-178.69c6.25-6.25 16.4-6.25 22.65 0s6.25 16.38 0 22.63L7.04 471.03c-9.38 9.37-9.38 24.57 0 33.94 9.38 9.37 24.59 9.37 33.98 0l57.13-57.07c42.09-.14 84.15-2.53 125.96-7.36 53.48-5.44 97.02-26.47 132.58-56.54H255.74l146.79-48.88c11.25-14.89 21.37-30.71 30.45-47.12h-81.14l106.54-53.21C500.29 132.86 510.19 26.26 512 0z"
              fill="currentColor"
            />
          </svg>
          Charte rédactionnelle
        </span>
      </div>
    </div>
    <div
      class="Menu__Dropdown-sc-1tufs3d-3 loMVOU"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-caret-down fa-w-10 fa-1x Icon-sc-4jlog9-0 hXLKsx"
        color="var(--color-black-leather-jacket)"
        data-icon="caret-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          fill="currentColor"
        />
      </svg>
      <span
        class="Menu__DropdownText-sc-1tufs3d-4 gxLpxC"
      >
        John Doe
      </span>
      <div
        class="sc-bdVaJa sc-bwzfXH Menu__DropdownMenu-sc-1tufs3d-5 dAypUM"
      >
        <span
          class="Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 Menu__DropdownLink-sc-1tufs3d-6 jmXsXQ"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-sign-out-alt fa-w-16 fa-1x Icon-sc-4jlog9-0 hXLKsx"
            color="var(--color-black-leather-jacket)"
            data-icon="sign-out-alt"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z"
              fill="currentColor"
            />
          </svg>
          Se déconnecter
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] layouts/<Menu /> (Contributor) should match snapshot diff when the path has changed 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,11 +1,11 @@
  <DocumentFragment>
    <div
      class=\\"sc-bdVaJa sc-bwzfXH Menu__Container-sc-1tufs3d-0 fftBWu\\"
    >
      <span
-       class=\\"Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 eCRsrl\\"
+       class=\\"Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 cqzYgS\\"
      >
        Liste des réponses
      </span>
      <div
        class=\\"Menu__Dropdown-sc-1tufs3d-3 loMVOU\\"
@@ -33,11 +33,11 @@
        </span>
        <div
          class=\\"sc-bdVaJa sc-bwzfXH Menu__DropdownMenu-sc-1tufs3d-5 dAypUM\\"
        >
          <span
-           class=\\"Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 Menu__DropdownLink-sc-1tufs3d-6 jmXsXQ\\"
+           class=\\"Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 Menu__DropdownLink-sc-1tufs3d-6 brZttd\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"svg-inline--fa fa-book fa-w-14 fa-1x Icon-sc-4jlog9-0 hXLKsx\\"
              color=\\"var(--color-black-leather-jacket)\\"
@@ -54,11 +54,11 @@
              />
            </svg>
            Guide : Outil de contribution
          </span>
          <span
-           class=\\"Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 Menu__DropdownLink-sc-1tufs3d-6 jmXsXQ\\"
+           class=\\"Menu__BaseLink-sc-1tufs3d-1 Menu__TopLink-sc-1tufs3d-2 Menu__DropdownLink-sc-1tufs3d-6 brZttd\\"
          >
            <svg
              aria-hidden=\\"true\\"
              class=\\"svg-inline--fa fa-feather-alt fa-w-16 fa-1x Icon-sc-4jlog9-0 hXLKsx\\"
              color=\\"var(--color-black-leather-jacket)\\""
`;
